--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </section>
 
   <footer>
-    <p>©️ 2025 Mon Nom — Tous droits réservés</p>
+    <p>©️ 2025 Nathand — Tous droits réservés</p>
   </footer>
 </body>
 </html>
